[gd_scene load_steps=8 format=3 uid="uid://cpyoftb7rluua"]

[ext_resource type="Script" uid="uid://bf810faw4kc0r" path="res://Scripts/Login.gd" id="1_1baen"]
[ext_resource type="Texture2D" uid="uid://drpe0jd8s8xfm" path="res://logo.png" id="2_767d8"]
[ext_resource type="PackedScene" uid="uid://bt7y5rkrqt62k" path="res://Scenes/Fondo.tscn" id="2_bhoxy"]
[ext_resource type="Theme" uid="uid://dmk8nta0isnn3" path="res://Styles/tema_UI.tres" id="8_sgmcn"]
[ext_resource type="FontFile" uid="uid://15ksbgidh1k3" path="res://Assets/Fonts/MinecraftRegular-Bmg3.otf" id="9_sgmcn"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bhoxy"]
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 0, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a6huy"]
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 0, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[node name="Login" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1baen")

[node name="Fondo" parent="." instance=ExtResource("2_bhoxy")]

[node name="ContenedorVertical" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -400.0
offset_right = 200.0
offset_bottom = 400.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="LogoEcuaventura" type="TextureRect" parent="ContenedorVertical"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
texture = ExtResource("2_767d8")
expand_mode = 1
stretch_mode = 4

[node name="InputNombre" type="LineEdit" parent="ContenedorVertical"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_vertical = 6
theme = ExtResource("8_sgmcn")
theme_override_fonts/font = ExtResource("9_sgmcn")
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxFlat_bhoxy")
placeholder_text = "Ingresa tu nombre..."
alignment = 1
language = "es_EC"

[node name="BotonIniciar" type="Button" parent="ContenedorVertical"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("8_sgmcn")
theme_override_fonts/font = ExtResource("9_sgmcn")
theme_override_font_sizes/font_size = 26
theme_override_styles/focus = SubResource("StyleBoxFlat_a6huy")
text = "¡Empecemos la aventura!
▶️"
language = "es_EC"
